# Gigomy

./: .gitignore  Gigomy.db  README.md  app.py  main.py  pyproject.toml
GigomyExt/: manifest.json  popup.html  popup.js
static/css/: style.css
static/js/: flatpikr.js  jquery-clockpicker.min.js  toggle.js
templates/: about.html  base.html  chat.html  dashboard.html  error.html  gigomy.html  index.html  jobs.html  see.html
templates/forms/: addJob.html  addJobOLD.html  login.html  loginOLD.html  setJob.html  signup.html  signupOLD.html
templates/js/: error.js  jobStatus.js  jobs.js
