[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Emily Ong <emilyohq11@gmail.com>"]
description = ""
name = "gigomy"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-login = "^0.5.0"
flask-socketio = "^4.2"
flask-sqlalchemy = "^2.4"
python = "^3.7"
werkzeug = "^1.0"
flask-mail = "^0.9.1"
python-dotenv = "^0.13.0"
flask-talisman = "^0.7.0"
[tool.poetry.dev-dependencies]
